--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,4 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt
+        sudo apt-get install -y sagemath
+        ; fi
