--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         sudo apt-get install -y make
         sudo apt-get install -y sagemath
+        sage --pip install pycryptodomex
     - name: Test application
       run: |
         make test
