--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "MAYO1.1" ]
   pull_request:
     branches: [ "main" ]
 
@@ -19,10 +19,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -31,6 +31,16 @@ jobs:
         sudo apt-get install -y make
         sudo apt-get install -y sagemath
         sage --pip install pycryptodomex
+   - name: Check installed versions
+      run: |
+        # Print Python version
+        python --version
+        # Print pip version
+        pip --version
+        # Print installed pycryptodomex version
+        python -c "import Cryptodome; print('pycryptodomex version:', Cryptodome.__version__)"
+        # Print SageMath version
+        sage --version
     - name: Test application
       run: |
         make test
