--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
         sudo apt-get update
         apt-cache policy sagemath
         curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh" 
-        bash Miniforge3-$(uname)-$(uname -m).sh
+        bash Miniforge3-$(uname)-$(uname -m).sh -b
         mamba create -n sage sage python=3.12
         conda activate sage
         python -m pip install --upgrade pip
