--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,8 +30,7 @@ jobs:
         python -m pip install --upgrade pip
         curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh" 
         bash Miniforge3-$(uname)-$(uname -m).sh -b
-        conda install mamba -c conda-forge
-        mamba create -n sage sage python=3.12
+        conda create -n sage sage python=3.12
         conda activate sage
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
