--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,6 +44,8 @@ jobs:
         # Print pip version
         pip --version
         # Print SageMath version
+        which sage
+        conda list | grep sage
         sage --version
     - name: Test application
       run: |
