--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,21 +31,19 @@ jobs:
         curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh" 
         bash Miniforge3-$(uname)-$(uname -m).sh -b
         source ~/miniforge3/etc/profile.d/conda.sh
-        conda create -n sage sage python=3.12 -c conda-forge
-        conda activate sage
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        sudo apt-get install -y make
-        sage --pip install pycryptodomex
+        conda create -n sage sage python=3.12 -c conda-forge -y
+        conda run -n sage pip install flake8 pytest
+        if [ -f requirements.txt ]; then conda run -n sage pip install -r requirements.txt; fi
+        conda install -y -n sage make -c conda-forge
+        conda run -n sage sage -pip install pycryptodomex
     - name: Check installed versions
       run: |
         # Print Python version
-        python --version
-        # Print pip version
-        pip --version
-        # Print SageMath version
+        source $HOME/miniforge3/etc/profile.d/conda.sh
+        conda run -n sage python --version
+        conda run -n sage pip --version
+        conda run -n sage sage --version
         conda list | grep sage
-        sage --version
     - name: Test application
       run: |
         make test
