--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,4 +45,6 @@ jobs:
         conda run -n sage sage --version
     - name: Test application
       run: |
-        conda run -n sage make test-conda
+        conda activate sage
+        source $HOME/miniforge3/etc/profile.d/conda.sh
+        make test-conda
