--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "MAYO1.1" ]
   pull_request:
     branches: [ "main" ]
 
@@ -19,18 +19,32 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     - name: Install dependencies
       run: |
+        sudo apt-get update
+        apt-cache policy sagemath
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        sudo apt-get install -y make
-        sudo apt-get install -y sagemath
-        sage --pip install pycryptodomex
+        curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh" 
+        bash Miniforge3-$(uname)-$(uname -m).sh -b
+        source ~/miniforge3/etc/profile.d/conda.sh
+        conda create -n sage sage python=3.12 -c conda-forge -y
+        conda run -n sage pip install flake8 pytest
+        if [ -f requirements.txt ]; then conda run -n sage pip install -r requirements.txt; fi
+        conda install -y -n sage make -c conda-forge
+        conda run -n sage sage -pip install pycryptodomex
+    - name: Check installed versions
+      run: |
+        # Print Python version
+        source $HOME/miniforge3/etc/profile.d/conda.sh
+        conda run -n sage python --version
+        conda run -n sage pip --version
+        conda run -n sage sage --version
     - name: Test application
       run: |
-        make test
+        source $HOME/miniforge3/etc/profile.d/conda.sh
+        conda activate sage
+        make test-conda
